rust/examples/variables/change_literal_string.rs
fn main() {
    let mut name = "Foo";
    println!("{name}");

    name.push_str(" Bar");
}
